<resources>
    <string name="app_name">No. 11 Praktek</string>

    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="hint_email">john@employee.com</string>
    <string name="hint_password">123456</string>
    <string name="button_sign_in">Sign In</string>

    <string name="label_name">Name</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_supplier">Supplier</string>
    <string name="label_date">Date</string>
    <string name="hint_name">Toothpaste</string>
    <string name="hint_quantity">10 Box</string>
    <string name="hint_suppier">Dental Global Exporter</string>
    <string name="hint_date">20/10/2019</string>
    <string name="button_add">Add</string>
</resources>
